service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-frontend-02cn
  name: web-frontend-02cn
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-frontend-02cn
  type: LoadBalancer
status:
  loadBalancer: {}
