route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: web-frontend-02cn
  name: web-frontend-02cn
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: ""
    name: web-frontend-02cn
    weight: null
status:
  ingress: null
